# KYSS-Nuclearhack

./: README.md  pyproject.toml
.github/workflows/: secret-scan.yml
scripts/: install_pre_commit_hook.sh
secrethawk/: __init__.py  analyzer.py  cli.py  git_history.py  guidance.py  local_llm.py  models.py  notifier.py  patterns.py  scanner.py  telegram_config.py  webapp.py
tests/: test_analyzer.py  test_cli_scanner.py  test_git_history.py  test_notifier.py  test_telegram_config.py
