[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "secrethawk"
version = "0.1.0"
description = "CLI scanner for early secret leak detection"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["fastapi>=0.110", "uvicorn>=0.27", "python-multipart>=0.0.9"]

[project.scripts]
secrethawk = "secrethawk.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
